--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="uft-8"/>
-    <title>Hola Mundo en HTML</title>
+    <title>Hola Mundo </title>
   </head>
   <body>
     <h1>Hola Mundo</h1>
-    Mi primera página en HTML.
+    Mi primera pagina en HTML.
   </body>
 </html>
