--- a/elements.html
+++ b/elements.html
@@ -528,7 +528,14 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</ul>
 						</div>
 					</footer>
-
+					<!-- Global site tag (gtag.js) - Google Analytics -->
+					<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151742772-1"></script>
+						<script>
+  							window.dataLayer = window.dataLayer || [];
+  							function gtag(){dataLayer.push(arguments);}
+  							gtag('js', new Date());
+							gtag('config', 'UA-151742772-1');
+						</script>
 			</div>
 
 		<!-- Scripts -->
