--- a/generic.html
+++ b/generic.html
@@ -70,7 +70,7 @@
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
+									<li><input type="button" id="boton" value="Send Message" onclick="enviar()" /></li>
 									<li><input type="reset" value="Clear" /></li>
 								</ul>
 							</form>
@@ -137,7 +137,14 @@
 							</ul>
 						</div>
 					</footer>
-
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+					<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151742772-1"></script>
+						<script>
+  							window.dataLayer = window.dataLayer || [];
+  							function gtag(){dataLayer.push(arguments);}
+  							gtag('js', new Date());
+							gtag('config', 'UA-151742772-1');
+						</script>
 			</div>
 
 		<!-- Scripts -->
