--- a/index.html
+++ b/index.html
@@ -198,8 +198,15 @@
 							</ul>
 						</div>
 					</footer>
-
-			</div>
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+					<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151742772-1"></script>
+						<script>
+  							window.dataLayer = window.dataLayer || [];
+  							function gtag(){dataLayer.push(arguments);}
+  							gtag('js', new Date());
+							gtag('config', 'UA-151742772-1');
+						</script>
+				</div>
 
 		<!-- Scripts -->
 			<script src="https://smtpjs.com/v3/smtp.js"></script>
