--- a/landing.html
+++ b/landing.html
@@ -181,7 +181,14 @@
 							</ul>
 						</div>
 					</footer>
-
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151742772-1"></script>
+				<script>
+					  window.dataLayer = window.dataLayer || [];
+					  function gtag(){dataLayer.push(arguments);}
+					  gtag('js', new Date());
+					gtag('config', 'UA-151742772-1');
+				</script>
 			</div>
 
 		<!-- Scripts -->
