--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3>for(i=1;i<=4;i++){
+											for(j=0;j<i; j++){
+												document.innerHTML +=  "*";
+											}
+										document.innerHTML +="<br>";
+										}</h3>
+										
 									</header>
 								</article>
 								<article>
